@@ -1,5 +1,9 @@
 2013-10-27  Ramon Casero  <rcasero@gmail.com>
 
+	* matlab/PointsToolbox/surface_param.m: (0.5.3)
+
+	- Fix help header for 'cald'.
+
 	* matlab/PointsToolbox/surface_param.m: (0.5.2)
 	* matlab/test/test_surface_param.m: (0.5.2)
 
